Added comments & python file

--- a/09-Docker/Dockerfile
+++ b/09-Docker/Dockerfile
@@ -1,17 +1,17 @@
 # GRABBING UBUNTU
+# syntax=docker/dockerfile:1.5-labs
 FROM ubuntu
 
 # COMMANDS ARE EXECUTED WHEN IMAGE IS MADE
-RUN echo "YO DOCKER!!!!!"
 RUN apt-get update
 
 # SETIING THE FILE PATH FOR THE FILE
 WORKDIR /usr/amsu
-RUN touch dummy.txt
 
 COPY ./noted.md .
+COPY ./app.py .
 
-ADD https://github.com/amsu21/AW-LFG-Bootcamp-2023.git .
+# ADD https://github.com/tkmagesh/lfg-bootcamp-2023.git .
 
 # PRINTING TO THE CONSOLE
 CMD [ "echo", "THIS IS CMD!" ]
